feat: merge blog UI, fix Index duplicate, add blogApi, NeuralBackground, Logout button and routing; make login/register translucent

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Autenticación | ReflexoPeru</title>
+    <title>Blog Cosmos | Microservicio Frontend</title>
     <meta
       name="description"
       content="Sistema de autenticación con registro, inicio de sesión y gestión de perfiles de usuario"
